# BeyondChats_task

./: .env  .evn  README.md  pyproject.toml
src/: main.py
src/controllers/: citations_services.py  home_services.py
src/core/: config.py
src/views/: citations.py  home.py
